# cf-ddns

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: release.yaml
examples/: del_all_records.rs
src/: config.rs  ip.rs  lib.rs  main.rs
src/cf_api/: create_dns.rs  delete_dns.rs  list_dns.rs  list_zones.rs  mod.rs
