[package]
name = "cf-ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ipnetwork = "0.20.0"
local-ip-address = "0.6.2"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
toml = "0.8.19"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
